<?xml version="1.0" encoding="utf-8" ?>
<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name" translatable="false">Go4Lunch</string>
    <string name="go4lunch" translatable="false">#Go4Lunch</string>
    <string name="find_place_to_eat">Find THE place to eat with your colleagues</string>
    <string name="img_app">img_app</string>
    <!-- Facebook application ID and custom URL scheme (app ID prefixed by 'fb'). -->
    <string name="facebook_application_id">419578691944371</string>
    <string name="facebook_login_protocol_scheme" tools:ignore="UnusedResources">fb419578691944371</string>
    <!-- Twitter consumer key and secret -->
    <string name="twitter_consumer_key">e0xUR383LCaL7KUWqKbTsvqTK</string>
    <string name="twitter_consumer_secret">wk5Z0unfxBAv6Wxc8BrYwGpUYAi92GGuG2RQ5PUMDDEl8gkx77</string>
    <!--Google Maps + Places API key-->
    <string name="google_maps_api_key">AIzaSyBplBBfi-OXVS843E016RmFO0zhMTgLkVw</string>
    <string name="connexion">Connexion</string>
    <string name="map_view">Map View</string>
    <string name="list_view">List View</string>
    <string name="workmates">Workmates</string>
    <string name="my_lunch">My Lunch</string>
    <string name="settings">Settings</string>
    <string name="logout">Logout</string>
    <string name="firstand_lastname">FIRSTAND Lastname</string>
    <string name="firstlast_gmail_com">firstlast@gmail.com</string>
    <string name="description_image_ndheader">Image of ND header</string>
    <string name="icon_of_the_app">Icon of the app</string>
    <string name="icon_of_gps">Icon of GPS</string>
    <string name="notifications_tv_text">Notifications :</string>
    <string name="language_tv_text">Set another language</string>
    <string name="delete_account_tv_text">Delete your account ?</string>
    <string name="enable_notifications_text">Enable notifications</string>
    <string name="delete">DELETE</string>
    <string name="go_back">Go back</string>
    <string name="language_choice" translatable="false">Language</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_detail">DetailActivity</string>
    <string name="restaurant_name_prototype">Name of Restaurant</string>
    <string name="restaurant_address_prototype">Address of Restaurant 12 Pasteur</string>
    <string name="address_of_the_place">Address of the place</string>
    <string name="restaurant_name">Restaurant Name</string>
    <string name="_50m">50m</string>
    <string name="workmates_sample_RV_item">Android is eating Turkish (Nabib Kebab)</string>
    <string name="button_login_text_logged">Enter</string>
    <string name="button_login_text_not_logged">Authentication</string>
    <string name="connection_succeed">Connection Success !</string>
    <string name="error_authentication_canceled">Authentication cancelled</string>
    <string name="error_no_internet">No internet connection...</string>
    <string name="error_unknown_error">An unknown error occurred...</string>
    <string name="lunch_eat_sample_tv">You will eat in:</string>
    <string name="my_lunch_tv_header">MY LUNCH</string>
    <string name="macdonald_s">MacDonald\'s</string>
    <string name="schedule_time_sample">Open until 2:30am</string>
    <string name="no_working_time_info">No working time info..</string>
    <string name="user_eating_place_sample">Android is eating at:</string>
    <string name="no_workmates_message">No workmates found</string>
    <string name="opening_hours_unavailable">No timetable available</string>
    <string name="closed_sample">Closed</string>
    <string name="website">WEBSITE</string>
    <string name="like">LIKE</string>
    <string name="call">CALL</string>
    <string name="todo">TODO</string>
    <string name="ok_pics">OK PICS</string>
    <string name="_0">(0)</string>
    <string name="search_title">Search</string>
</resources>
