<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rl_header"
    android:layout_width="match_parent"
    android:layout_height="192dp"
    android:background="@drawable/img_nav_header_bg"
    android:gravity="bottom"
    android:padding="16dp"
    android:theme="@style/ThemeOverlay.AppCompat.Dark">

    <TextView
        android:id="@+id/nd_header_appname"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="#FFF"
        android:textSize="25sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/iv_nd"
        android:layout_width="90dp"
        android:layout_height="90dp"
        android:layout_below="@id/nd_header_appname"
        android:contentDescription="@string/description_image_ndheader"
        android:src="@drawable/ic_account_circle_white_24dp" />

    <TextView
        android:id="@+id/header_nd_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/nd_header_appname"
        android:layout_marginTop="15dp"
        android:layout_toEndOf="@id/iv_nd"
        android:text="@string/firstand_lastname"
        android:textAppearance="@style/TextAppearance.AppCompat.Body1"
        android:textColor="#fff"
        android:textSize="18sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/header_nd_detail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/header_nd_title"
        android:layout_toEndOf="@id/iv_nd"
        android:text="@string/firstlast_gmail_com"
        android:textColor="#FFF" />

</RelativeLayout>