<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_bg_auth"
    tools:context=".MyLunchActivity">

    <!-- OPACITY FILTER -->
    <View
        android:id="@+id/opacityFilter"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentBottom="true"
        android:alpha="0.5"
        android:background="@android:color/black" />

    <TextView
        android:id="@+id/tv_lunch_header"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp"
        android:text="@string/my_lunch_tv_header"
        android:textColor="@android:color/white"
        android:textSize="50sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/iv_lunch"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:layout_below="@id/tv_lunch_header"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="10dp"
        android:background="@drawable/ic_restaurant"
        android:contentDescription="@string/todo" />

    <TextView
        android:id="@+id/tv_lunch_selection"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:ellipsize="end"
        android:ems="8"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/lunch_eat_sample_tv"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/tv_lunch_name_restaurant"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_lunch_selection"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:drawableStart="@drawable/ic_arrow_forward"
        android:ems="8"
        android:maxLines="1"
        android:singleLine="true"
        android:text="@string/macdonald_s"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:textSize="30sp"
        android:textStyle="bold" />


    <Button
        android:id="@+id/btn_lunch_back"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="90dp"
        android:background="@drawable/blue_btn"
        android:paddingLeft="45dp"
        android:paddingRight="45dp"
        android:text="@string/go_back" />

</RelativeLayout>