<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--NOTIFICATIONS PART-->
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="12dp"
        android:id="@+id/notifications_settings">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/notifications_tv_text"
            android:id="@+id/tv_settings_notifications"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            />
    </RelativeLayout>

    <!--LANGUAGE SELECTION-->
    <RelativeLayout
        android:id="@+id/language_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="12dp"
        android:layout_below="@id/notifications_settings">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/language_tv_text"
            android:id="@+id/tv_settings_language"/>
    </RelativeLayout>
    <!--DELETE USER ACCOUNT-->
    <RelativeLayout
        android:id="@+id/account_delete_settings"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="12dp"
        android:layout_marginRight="12dp"
        android:layout_marginTop="12dp"
        android:layout_below="@id/language_settings">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/delete_account_tv_text"
            android:id="@+id/tv_settings_delete_account"/>
    </RelativeLayout>




</RelativeLayout>